--- a/William_Rosser_Code/Week2/html/index.html
+++ b/William_Rosser_Code/Week2/html/index.html
@@ -17,7 +17,7 @@
           <input type="password" id="pw_box"  name="pasword" placeholder="password">
           <br/>
           <br/>
-          <input type="submit" name="log_in_button">
+          <input type="submit" name="log_in_button" value="Log In">
         </form>
       </div>
     </div>
