--- a/Katelyn_Peterson_Code/Week3/TRMS_Project_One/src/main/webapp/index.html
+++ b/Katelyn_Peterson_Code/Week3/TRMS_Project_One/src/main/webapp/index.html
@@ -51,11 +51,17 @@
 		<div id = "wrapper">
 	
 			<!-- Company Name -->
-			<header>
+			<nav>
+
+				<ul>
 		
-				<img src = "images/logo.jpg" alt = "Geneovision, Inc" width = "250" height = "141" />
+					<li><img src = "images/logo.jpg" alt = "Geneovision, Inc" width = "250" height = "141" /></li>
+						
+					<span id="navbar"></span>
+
+				</ul>
 		
-			</header>
+			</nav>
 			
 			<!-- See Week Two, logIn HTML for Nav and Log In stuff when I get there -->
 			
