--- a/Server_projects/TomCat Work/TRMS/src/main/webapp/index.html
+++ b/Server_projects/TomCat Work/TRMS/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Bank App Full Stack!</title>
+<title>Full Stack!</title>
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
 	integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
@@ -19,6 +19,8 @@
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
 	integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
 	crossorigin="anonymous"></script>
+
+
 </head>
 <body>
 	<style>
@@ -30,18 +32,30 @@ h1 {
 	color: yellow;
 	text-align: center;
 }
+
+table#t01 {
+	width: 100%;
+	background-color: yellow;
+}
 </style>
 
 	<h1>Welcome to Wakanda TRMS!</h1>
-	<img
-		src="https://cnet3.cbsistatic.com/img/hRLR52cs7Vkty5_5LaiZIt76EAs=/670x503/2018/02/24/ba28837c-f067-48b2-93cc-c53faa4c9ad5/blackpantherthrone.jpg"
+
+	<div id=navbar></div>
+
+
+
+	<br>
+
+
+	<!--	<img	src="https://cnet3.cbsistatic.com/img/hRLR52cs7Vkty5_5LaiZIt76EAs=/670x503/2018/02/24/ba28837c-f067-48b2-93cc-c53faa4c9ad5/blackpantherthrone.jpg"
 		alt="Wakanda" style="width: 250px; height: 200px; class: Center">
+-->
 	<br>
 
 	<div id="view">
 		<!-- could start with login view, and replace as the app path continues  -->
 	</div>
-
 	<script src="js/login.js"></script>
 
 </body>
