some work on dao, service, login, register, validation, and a few html pages; login works, registration does not

--- a/TRMS_Project/src/main/webapp/index.html
+++ b/TRMS_Project/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>GenBank Full Stack</title>
+<title>CK TRMS</title>
 
 
 <link rel="stylesheet"
@@ -26,6 +26,7 @@
 
 </head>
 <body>
+	
 	<div id="navbar"></div>
 
 	<div id="view"></div>
