--- a/Riley_Mathis_Code/TRMS/trms/src/main/webapp/index.html
+++ b/Riley_Mathis_Code/TRMS/trms/src/main/webapp/index.html
@@ -12,6 +12,14 @@
 <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 </head>
 <body>
-	<div id="view"></div>
+	<div id="navbar"></div>
+
+
+	<div id="view">
+	<!-- could start with login view, and replace as the app path continues  -->
+	</div>
+
+	<script src="js/app.js"></script>
+
 </body>
 </html>
