--- a/William_Rosser_Code/Project 1/src/main/webapp/index.html
+++ b/William_Rosser_Code/Project 1/src/main/webapp/index.html
@@ -16,7 +16,7 @@
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
 	integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 	crossorigin="anonymous"></script>
-<title>TRMS Log In</title>
+<title>TRMS</title>
 <script src="js/app.js" type="text/javascript"></script>
 </head>
 <body>
