bit more added to the js hw

--- a/Wesley_Hatin_Code/javascriptHW/indexJavaScript.html
+++ b/Wesley_Hatin_Code/javascriptHW/indexJavaScript.html
@@ -145,17 +145,31 @@
 	Define function getHobbies()
 	Find all checked options in the 'skills' select element.
 	Print the value and the contents.
-	
+	*/
 	function getHobbies(){
-		
+		for(option in document.getElementsByName('skills')){
+			if(option.checked == true){
+				console.log(option);
+			}
+		}
 	}
 	  
+	/*
 	5. Custom Attribute
 	Define function getCustomAttribute()
 	Find all elements with "data-customAttr" attribute
 	Print the value of the attribute.
 	Print the element that has the attribute.
+	*/
 	
+	function getCustomAttribute(){
+		var elements = document.querySelectorAll('[data-customAttr]');
+		for(element in elements){
+			console.log(element.data-customAttr + ", " + element);
+		}
+	}
+	
+	/*
 	6. Sum Event
 	NOTE: Write unobtrusive Javascript
 	Regarding these elements:
@@ -164,16 +178,37 @@
 		<h3>Sum: <span id="sum"></span></h3>
 	
 	Define onchange event handler.
-	Add <input> element values.
+	Add the <input> element values.
 	Put the sum in the <span> element.
 	If values cannot be added, put "Cannot add" in the <span> element
+	*/
 	
+	
+	document.getElementById("num1").addEventListener("change", addition);
+	document.getElementById("num2").addEventListener("change", addition);
+
+	function addition() {
+	    var x = document.getElementById("num1");
+	    var y = document.getElementById("num2");
+	    var z = x + y;
+	    $('#span').html(z);
+	}
+	
+	/*
 	7. Skills Event
 	NOTE: Write unobtrusive Javascript
 	When user selects a skill, create an alert with a message similar to:
 		"Are you sure CSS is one of your skills?"
 	NOTE: no alert should appear when user deselects a skill.
+	*/
 	
+	document.getElementsByName('skill').addEventListener('select', skillalert);
+	
+	function skillalert(){
+		alert(`Are you sure ${#skill}`);
+	}
+	
+	/*
 	8. Favorite Color Event
 	NOTE: Write unobtrusive Javascript
 	NOTE: This is regarding the favoriteColor radio buttons.
@@ -181,19 +216,45 @@
 		"So you like green more than blue now?"
 	In this example, green is the new value and blue is the old value.
 	Make the background color (of all favoriteColor radio buttons) the newly selected favoriteColor
+	*/
 	
+	document.getElementByName('favoriteColor').addEventListener("change", colorchange);
+	
+	function colorchange {
+		alert(`So you like ${favoriteColor.defaultValue} and not ${favoriteColor.val}?`);
+	}
+	
+	/*
 	9. Show/Hide Event
 	NOTE: Write unobtrusive Javascript
 	When user hovers over an employees name:
 		Hide the name if shown.
 		Show the name if hidden.
+	*/
+		document.getElementById(empName).addEventListener("mouseover", show);
 	
+	function show(){
+		if('#name'.hidden){
+			$('#name').show();
+		}
+		else{
+			$('#name').hide();
+		}
+	}
+	
+	/*
 	10. Current Time
 	Regarding this element:
 		<h5 id="currentTime"></h5>
 	Show the current time in this element in this format: 9:05:23 AM
 	The time should be accurate to the second without having to reload the page.
+	*/
 	
+	function showtime() {
+		
+	}
+	
+	/*
 	11. Delay
 	Regarding this element:
 		<p id="helloWorld">Hello, World!</p>
