--- a/TRMS_Project/src/main/webapp/index.html
+++ b/TRMS_Project/src/main/webapp/index.html
@@ -10,6 +10,7 @@
 	integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
 	crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
+<link rel="stylesheet" type="text/css" href="swag.css">
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
