--- a/Server_projects/TomCat Work/TRMS/src/main/webapp/index.html
+++ b/Server_projects/TomCat Work/TRMS/src/main/webapp/index.html
@@ -35,6 +35,10 @@ h1 {
 	color: yellow;
 	text-align: center;
 }
+h2 {
+	color: yellow;
+	text-align: center;
+}
 
 table#t01 {
 	width: 100%;
@@ -60,7 +64,6 @@ label{
 		alt="Wakanda" style="width: 250px; height: 200px; class: Center">
 -->
 	<br>
-
 	<div id="view">
 		<!-- could start with login view, and replace as the app path continues  -->
 	</div>
