TRMS for presentation

--- a/Riley_Mathis_Code/TRMS/trms/src/main/webapp/index.html
+++ b/Riley_Mathis_Code/TRMS/trms/src/main/webapp/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<div id="navbar"></div>
-
+	<h1 style="text-align:center">Tuition Reimbursement Management System</h1>
 
 	<div id="view">
 	<!-- could start with login view, and replace as the app path continues  -->
